--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@
 
   <script>
     const JSON_FILE = 'Video.json';
-    const ADS_URL = 'https://otieu.com/4/9938705';
-    
+    const ADS_URL = 
     const COOLDOWN_AD = 5000; // Iklan bisa muncul lagi setelah 5 detik jika di-pause
     let lastAdTime = 0;
 
