--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
   </style>
 
   <!-- IKLAN POP-UNDER ANDA -->
+  <script>(function(s){s.dataset.zone='10570899',s.src='https://al5sm.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
+  
 </head>
 <body>
 
