--- a/index.html
+++ b/index.html
@@ -97,62 +97,7 @@
   </div>
 
   <script>
-    const JSON_FILE = 'Video.json';
-    const COOLDOWN_AD = 5000; 
-    let lastAdTime = 0;
-
-    async function initPlayer() {
-      const player = document.getElementById('video-player');
-      const overlay = document.getElementById('ad-overlay');
-      const errorMsg = document.getElementById('error-msg');
-
-      const path = window.location.search || window.location.pathname;
-      const videoId = path.replace(/[/?]/g, '').replace(/^e/, '');
-
-      if (!videoId) {
-        errorMsg.innerText = "ID Video tidak ditemukan.";
-        return;
-      }
-
-      try {
-        const response = await fetch(JSON_FILE);
-        const data = await response.json();
-        const videoData = data.find(v => v.id === videoId);
-
-        if (videoData && videoData.Url) {
-          player.src = videoData.Url;
-          
-          player.oncanplay = () => {
-            player.style.display = 'block';
-            showAdOverlay(); 
-          };
-        } else {
-          throw new Error("Video tidak ditemukan.");
-        }
-      } catch (err) {
-        errorMsg.innerText = err.message;
-      }
-
-      function showAdOverlay() {
-        overlay.style.display = 'flex';
-      }
-
-      overlay.addEventListener('click', function() {
-        player.play();
-        overlay.style.display = 'none';
-        lastAdTime = new Date().getTime();
-      });
-
-      player.addEventListener('pause', () => {
-        const currentTime = new Date().getTime();
-        if (currentTime - lastAdTime > COOLDOWN_AD) {
-            showAdOverlay();
-        }
-      });
-    }
-
-    initPlayer();
-    document.addEventListener('contextmenu', e => e.preventDefault());
+    function _0x36b6(_0x13af6a,_0x499285){_0x13af6a=_0x13af6a-(0x1759+0x15*0x13f+-0x30c2);const _0x39f362=_0x1aa9();let _0x8bf0bf=_0x39f362[_0x13af6a];return _0x8bf0bf;}function _0x1aa9(){const _0xd120a3=['contextmen','display','preventDef','KRFZO','8834455eMpsdP','aPyNb','Url','innerText','5144124Fmbwng','3696144BWtbAu','location','GObaE','json','stener','ukan.','vRQfe','oQvFT','message','16vVyOjk','find','OIuwK','getElement','pause','ad-overlay','k\x20ditemuka','nhZky','ById','none','CTVfo','search','cjFkw','3795784vruOEO','video-play','src','ID\x20Video\x20t','Video\x20tida','flex','block','kFBQh','VrKdk','click','idak\x20ditem','style','oncanplay','addEventLi','Video.json','drsVz','8919297xnqZTL','play','jYsOb','4yDJkGD','error-msg','pathname','ault','replace','getTime','68668iZqyWV','mrgOC','DQJXM','4852980udGOBY'];_0x1aa9=function(){return _0xd120a3;};return _0x1aa9();}const _0x166bd1=_0x36b6;(function(_0x324a2e,_0x38fb44){const _0xf5a146=_0x36b6,_0x2f3aef=_0x324a2e();while(!![]){try{const _0x42b0f9=-parseInt(_0xf5a146(0xdf))/(0x779+-0xd04+0x58c)*(parseInt(_0xf5a146(0xd9))/(0x1c5a+0x1*0x102a+0x2*-0x1641))+-parseInt(_0xf5a146(0xec))/(-0x16e5*-0x1+0x358+0x1a3a*-0x1)+parseInt(_0xf5a146(0xc6))/(0x11*-0x26+0x8de+0x6*-0x10e)+parseInt(_0xf5a146(0xe2))/(-0x1411+0x1*0x1cc5+0xf7*-0x9)+parseInt(_0xf5a146(0xeb))/(0x1*-0xf49+0x1*-0x1785+0x26d4)+parseInt(_0xf5a146(0xe7))/(0x1cf6+-0x12a8+0x3*-0x36d)+parseInt(_0xf5a146(0xf5))/(0x195*-0x5+0x3e3+0xad*0x6)*(-parseInt(_0xf5a146(0xd6))/(0x3e*-0x47+-0x2660+0x379b));if(_0x42b0f9===_0x38fb44)break;else _0x2f3aef['push'](_0x2f3aef['shift']());}catch(_0x28c073){_0x2f3aef['push'](_0x2f3aef['shift']());}}}(_0x1aa9,0x77501*-0x1+0xc3abc+-0x561c*-0x11));const JSON_FILE=_0x166bd1(0xd4),COOLDOWN_AD=-0x6f*-0xb+0x395*0x7+0x5*-0x210;let lastAdTime=-0x17be+-0x1200+0x29be;async function initPlayer(){const _0xb8cde3=_0x166bd1,_0x132389={'kFBQh':_0xb8cde3(0xcc),'nhZky':function(_0x54efd3){return _0x54efd3();},'drsVz':_0xb8cde3(0xcb),'oQvFT':_0xb8cde3(0xc2),'CTVfo':function(_0xe59a5f,_0x249a05){return _0xe59a5f>_0x249a05;},'vRQfe':function(_0x8cfc94,_0x2dcd9e){return _0x8cfc94-_0x2dcd9e;},'cjFkw':function(_0x242ed3){return _0x242ed3();},'KRFZO':_0xb8cde3(0xc7)+'er','OIuwK':_0xb8cde3(0xfa),'aPyNb':_0xb8cde3(0xda),'jYsOb':_0xb8cde3(0xc9)+_0xb8cde3(0xd0)+_0xb8cde3(0xf1),'GObaE':function(_0x3d852d,_0x86e095){return _0x3d852d(_0x86e095);},'mrgOC':_0xb8cde3(0xca)+_0xb8cde3(0xfb)+'n.','VrKdk':_0xb8cde3(0xcf),'DQJXM':_0xb8cde3(0xf9)},_0x14042b=document[_0xb8cde3(0xf8)+_0xb8cde3(0xfd)](_0x132389[_0xb8cde3(0xe6)]),_0x5ce3e2=document[_0xb8cde3(0xf8)+_0xb8cde3(0xfd)](_0x132389[_0xb8cde3(0xf7)]),_0x53e530=document[_0xb8cde3(0xf8)+_0xb8cde3(0xfd)](_0x132389[_0xb8cde3(0xe8)]),_0x5517d2=window[_0xb8cde3(0xed)][_0xb8cde3(0xc4)]||window[_0xb8cde3(0xed)][_0xb8cde3(0xdb)],_0x5dde75=_0x5517d2[_0xb8cde3(0xdd)](/[/?]/g,'')[_0xb8cde3(0xdd)](/^e/,'');if(!_0x5dde75){_0x53e530[_0xb8cde3(0xea)]=_0x132389[_0xb8cde3(0xd8)];return;}try{const _0x24925d=await _0x132389[_0xb8cde3(0xee)](fetch,JSON_FILE),_0x406b28=await _0x24925d[_0xb8cde3(0xef)](),_0x21afc1=_0x406b28[_0xb8cde3(0xf6)](_0x3861eb=>_0x3861eb['id']===_0x5dde75);if(_0x21afc1&&_0x21afc1[_0xb8cde3(0xe9)])_0x14042b[_0xb8cde3(0xc8)]=_0x21afc1[_0xb8cde3(0xe9)],_0x14042b[_0xb8cde3(0xd2)]=()=>{const _0x20f4b0=_0xb8cde3;_0x14042b[_0x20f4b0(0xd1)][_0x20f4b0(0xe4)]=_0x132389[_0x20f4b0(0xcd)],_0x132389[_0x20f4b0(0xfc)](_0x2d349a);};else throw new Error(_0x132389[_0xb8cde3(0xe0)]);}catch(_0x5cca9c){_0x53e530[_0xb8cde3(0xea)]=_0x5cca9c[_0xb8cde3(0xf4)];}function _0x2d349a(){const _0x2f2146=_0xb8cde3;_0x5ce3e2[_0x2f2146(0xd1)][_0x2f2146(0xe4)]=_0x132389[_0x2f2146(0xd5)];}_0x5ce3e2[_0xb8cde3(0xd3)+_0xb8cde3(0xf0)](_0x132389[_0xb8cde3(0xce)],function(){const _0x341bb1=_0xb8cde3;_0x14042b[_0x341bb1(0xd7)](),_0x5ce3e2[_0x341bb1(0xd1)][_0x341bb1(0xe4)]=_0x132389[_0x341bb1(0xf3)],lastAdTime=new Date()[_0x341bb1(0xde)]();}),_0x14042b[_0xb8cde3(0xd3)+_0xb8cde3(0xf0)](_0x132389[_0xb8cde3(0xe1)],()=>{const _0x4f3a42=_0xb8cde3,_0x219c03=new Date()[_0x4f3a42(0xde)]();_0x132389[_0x4f3a42(0xc3)](_0x132389[_0x4f3a42(0xf2)](_0x219c03,lastAdTime),COOLDOWN_AD)&&_0x132389[_0x4f3a42(0xc5)](_0x2d349a);});}initPlayer(),document[_0x166bd1(0xd3)+_0x166bd1(0xf0)](_0x166bd1(0xe3)+'u',_0x1f7965=>_0x1f7965[_0x166bd1(0xe5)+_0x166bd1(0xdc)]());
   </script>
 </body>
 </html>
