--- a/index.html
+++ b/index.html
@@ -1,103 +1,149 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
- <meta name="monetag" content="737671146a0f5ae158a2c8431df9bce1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Streaming Video Premium</title>
+
+<script>(function(s){s.dataset.zone='10570899',s.src='https://al5sm.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
+
+
+  <title>CDN VIDEY</title>
+
+  <script type="text/javascript">
+    (function (l) {
+      if (l.hash && l.hash.startsWith('#/')) {
+        const newPath = l.hash.replace('#', '');
+        window.location.replace(newPath);
+      }
+      if (l.search[1] === "/") {
+        var decoded = l.search
+          .slice(1)
+          .split("&")
+          .map(function (s) {
+            return s.replace(/~and~/g, "&");
+          })
+          .join("?");
+        window.history.replaceState(null, null, l.pathname.slice(0, -1) + decoded + l.hash);
+      }
+    })(window.location);
+  </script>
+
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
   <style>
-    body, html {
-      margin: 0; padding: 0;
-      width: 100%; height: 100%;
-      background-color: #000;
-      display: flex; justify-content: center; align-items: center;
-      overflow: hidden;
-      font-family: sans-serif;
-    }
-
-    .video-container {
-      position: relative;
-      width: 100%;
+    html, body {
       height: 100%;
+      margin: 0;
+      padding: 0;
       display: flex;
-      justify-content: center;
-      align-items: center;
-      background: #000;
+      flex-direction: column;
+      min-height: 100vh;
+      background-color: #000;
+      color: #fff;
     }
 
-    video {
-      max-width: 100%;
-      max-height: 100%;
-      width: auto;
+    main {
+      flex: 1 0 auto;
+    }
+
+    footer {
+      flex-shrink: 0;
+    }
+
+    #video-container {
+      width: 100%;
+      max-width: 1200px;
+      margin: 0 auto;
+      position: relative;
+      overflow: hidden;
+      background-color: #111;
+      box-shadow: 0 4px 20px rgba(255,255,255,0.05);
+    }
+
+    #video-player {
+      width: 100%;
       height: auto;
-      display: none;
-      outline: none;
+      display: block;
+      object-fit: contain;
+      background-color: #000;
     }
 
-    video::-internal-media-controls-download-button { display:none; }
-    video::-webkit-media-controls-enclosure { overflow:hidden; }
-    video::-webkit-media-controls-panel { width: calc(100% + 30px); }
-
-    /* Overlay Iklan - Blur dan Background Gelap Dihilangkan */
-    #ad-overlay {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      z-index: 100;
-      cursor: pointer;
-      display: none;
-      justify-content: center;
-      align-items: center;
-      background: rgba(0, 0, 0, 0); /* Dibuat transparan total */
-      backdrop-filter: none; /* Efek blur dihapus */
-    }
-
-    .play-button-visual {
-      width: 80px; height: 80px;
-      background: rgba(0, 0, 0, 0.5); /* Tombol sedikit gelap agar kontras dengan video */
+    .loading-spinner {
+      border: 4px solid rgba(255, 255, 255, 0.2);
+      border-top: 4px solid #ffffff;
       border-radius: 50%;
-      display: flex; justify-content: center; align-items: center;
-      border: 3px solid #fff;
-      transition: transform 0.2s ease;
-      box-shadow: 0 0 20px rgba(0,0,0,0.5);
-    }
-    
-    .play-button-visual::after {
-      content: '';
-      border-style: solid;
-      border-width: 15px 0 15px 25px;
-      border-color: transparent transparent transparent white;
-      margin-left: 5px;
+      width: 40px;
+      height: 40px;
+      animation: spin 1s linear infinite;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 20;
+      display: none;
     }
 
-    #error-msg { color: #ff4444; position: absolute; text-align: center; width: 90%; top: 50%; transform: translateY(-50%); }
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+
+    #error-message {
+      display: none;
+      color: #ff4d4d;
+      text-align: center;
+      margin-top: 20px;
+    }
   </style>
-
-  <!-- IKLAN POP-UNDER ANDA -->
-  <script>(function(s){s.dataset.zone='10570899',s.src='https://al5sm.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
-  
 </head>
-<body>
 
-  <div class="video-container">
-    <div id="ad-overlay">
-        <div class="play-button-visual"></div>
+<body class="font-sans">
+
+  <header class="bg-black pt-3 pb-2 px-6 border-b border-gray-800">
+    <div class="max-w-7xl mx-auto flex justify-between items-center">
+      <h1 class="text-2xl font-bold text-white">CDN VIDEY</h1>
+    </div>
+  </header>
+
+  <main class="pt-4 pb-10">
+    <div id="video-container" class="mt-4">
+      <div class="loading-spinner" id="loading-spinner"></div>
+      <video 
+        id="video-player" 
+        controls 
+        preload="metadata"
+        controlsList="nodownload noremoteplayback" 
+        disablePictureInPicture>
+        Your browser does not support the video tag.
+      </video>
     </div>
 
-    <video 
-      id="video-player" 
-      controls 
-      controlsList="nodownload noplaybackrate" 
-      disablePictureInPicture
-      preload="auto" 
-      playsinline>
-    </video>
-    
-    <div id="error-msg"></div>
-  </div>
+    <div id="error-message" class="max-w-7xl mx-auto px-6"></div>
+
+    <section class="max-w-7xl mx-auto mt-8 px-6">
+      <h2 id="video-title" class="text-3xl font-bold mb-4 text-white">
+        Judul Video
+      </h2>
+      <p id="video-description" class="text-gray-300 mb-6">
+        Deskripsi video akan muncul di sini.
+      </p>
+    </section>
+  </main>
+
+  <footer class="bg-black py-4 px-6 text-center text-gray-400 border-t border-gray-800">
+    &copy; CDN VIDEY
+  </footer>
 
   <script>
-    function _0x36b6(_0x13af6a,_0x499285){_0x13af6a=_0x13af6a-(0x1759+0x15*0x13f+-0x30c2);const _0x39f362=_0x1aa9();let _0x8bf0bf=_0x39f362[_0x13af6a];return _0x8bf0bf;}function _0x1aa9(){const _0xd120a3=['contextmen','display','preventDef','KRFZO','8834455eMpsdP','aPyNb','Url','innerText','5144124Fmbwng','3696144BWtbAu','location','GObaE','json','stener','ukan.','vRQfe','oQvFT','message','16vVyOjk','find','OIuwK','getElement','pause','ad-overlay','k\x20ditemuka','nhZky','ById','none','CTVfo','search','cjFkw','3795784vruOEO','video-play','src','ID\x20Video\x20t','Video\x20tida','flex','block','kFBQh','VrKdk','click','idak\x20ditem','style','oncanplay','addEventLi','Video.json','drsVz','8919297xnqZTL','play','jYsOb','4yDJkGD','error-msg','pathname','ault','replace','getTime','68668iZqyWV','mrgOC','DQJXM','4852980udGOBY'];_0x1aa9=function(){return _0xd120a3;};return _0x1aa9();}const _0x166bd1=_0x36b6;(function(_0x324a2e,_0x38fb44){const _0xf5a146=_0x36b6,_0x2f3aef=_0x324a2e();while(!![]){try{const _0x42b0f9=-parseInt(_0xf5a146(0xdf))/(0x779+-0xd04+0x58c)*(parseInt(_0xf5a146(0xd9))/(0x1c5a+0x1*0x102a+0x2*-0x1641))+-parseInt(_0xf5a146(0xec))/(-0x16e5*-0x1+0x358+0x1a3a*-0x1)+parseInt(_0xf5a146(0xc6))/(0x11*-0x26+0x8de+0x6*-0x10e)+parseInt(_0xf5a146(0xe2))/(-0x1411+0x1*0x1cc5+0xf7*-0x9)+parseInt(_0xf5a146(0xeb))/(0x1*-0xf49+0x1*-0x1785+0x26d4)+parseInt(_0xf5a146(0xe7))/(0x1cf6+-0x12a8+0x3*-0x36d)+parseInt(_0xf5a146(0xf5))/(0x195*-0x5+0x3e3+0xad*0x6)*(-parseInt(_0xf5a146(0xd6))/(0x3e*-0x47+-0x2660+0x379b));if(_0x42b0f9===_0x38fb44)break;else _0x2f3aef['push'](_0x2f3aef['shift']());}catch(_0x28c073){_0x2f3aef['push'](_0x2f3aef['shift']());}}}(_0x1aa9,0x77501*-0x1+0xc3abc+-0x561c*-0x11));const JSON_FILE=_0x166bd1(0xd4),COOLDOWN_AD=-0x6f*-0xb+0x395*0x7+0x5*-0x210;let lastAdTime=-0x17be+-0x1200+0x29be;async function initPlayer(){const _0xb8cde3=_0x166bd1,_0x132389={'kFBQh':_0xb8cde3(0xcc),'nhZky':function(_0x54efd3){return _0x54efd3();},'drsVz':_0xb8cde3(0xcb),'oQvFT':_0xb8cde3(0xc2),'CTVfo':function(_0xe59a5f,_0x249a05){return _0xe59a5f>_0x249a05;},'vRQfe':function(_0x8cfc94,_0x2dcd9e){return _0x8cfc94-_0x2dcd9e;},'cjFkw':function(_0x242ed3){return _0x242ed3();},'KRFZO':_0xb8cde3(0xc7)+'er','OIuwK':_0xb8cde3(0xfa),'aPyNb':_0xb8cde3(0xda),'jYsOb':_0xb8cde3(0xc9)+_0xb8cde3(0xd0)+_0xb8cde3(0xf1),'GObaE':function(_0x3d852d,_0x86e095){return _0x3d852d(_0x86e095);},'mrgOC':_0xb8cde3(0xca)+_0xb8cde3(0xfb)+'n.','VrKdk':_0xb8cde3(0xcf),'DQJXM':_0xb8cde3(0xf9)},_0x14042b=document[_0xb8cde3(0xf8)+_0xb8cde3(0xfd)](_0x132389[_0xb8cde3(0xe6)]),_0x5ce3e2=document[_0xb8cde3(0xf8)+_0xb8cde3(0xfd)](_0x132389[_0xb8cde3(0xf7)]),_0x53e530=document[_0xb8cde3(0xf8)+_0xb8cde3(0xfd)](_0x132389[_0xb8cde3(0xe8)]),_0x5517d2=window[_0xb8cde3(0xed)][_0xb8cde3(0xc4)]||window[_0xb8cde3(0xed)][_0xb8cde3(0xdb)],_0x5dde75=_0x5517d2[_0xb8cde3(0xdd)](/[/?]/g,'')[_0xb8cde3(0xdd)](/^e/,'');if(!_0x5dde75){_0x53e530[_0xb8cde3(0xea)]=_0x132389[_0xb8cde3(0xd8)];return;}try{const _0x24925d=await _0x132389[_0xb8cde3(0xee)](fetch,JSON_FILE),_0x406b28=await _0x24925d[_0xb8cde3(0xef)](),_0x21afc1=_0x406b28[_0xb8cde3(0xf6)](_0x3861eb=>_0x3861eb['id']===_0x5dde75);if(_0x21afc1&&_0x21afc1[_0xb8cde3(0xe9)])_0x14042b[_0xb8cde3(0xc8)]=_0x21afc1[_0xb8cde3(0xe9)],_0x14042b[_0xb8cde3(0xd2)]=()=>{const _0x20f4b0=_0xb8cde3;_0x14042b[_0x20f4b0(0xd1)][_0x20f4b0(0xe4)]=_0x132389[_0x20f4b0(0xcd)],_0x132389[_0x20f4b0(0xfc)](_0x2d349a);};else throw new Error(_0x132389[_0xb8cde3(0xe0)]);}catch(_0x5cca9c){_0x53e530[_0xb8cde3(0xea)]=_0x5cca9c[_0xb8cde3(0xf4)];}function _0x2d349a(){const _0x2f2146=_0xb8cde3;_0x5ce3e2[_0x2f2146(0xd1)][_0x2f2146(0xe4)]=_0x132389[_0x2f2146(0xd5)];}_0x5ce3e2[_0xb8cde3(0xd3)+_0xb8cde3(0xf0)](_0x132389[_0xb8cde3(0xce)],function(){const _0x341bb1=_0xb8cde3;_0x14042b[_0x341bb1(0xd7)](),_0x5ce3e2[_0x341bb1(0xd1)][_0x341bb1(0xe4)]=_0x132389[_0x341bb1(0xf3)],lastAdTime=new Date()[_0x341bb1(0xde)]();}),_0x14042b[_0xb8cde3(0xd3)+_0xb8cde3(0xf0)](_0x132389[_0xb8cde3(0xe1)],()=>{const _0x4f3a42=_0xb8cde3,_0x219c03=new Date()[_0x4f3a42(0xde)]();_0x132389[_0x4f3a42(0xc3)](_0x132389[_0x4f3a42(0xf2)](_0x219c03,lastAdTime),COOLDOWN_AD)&&_0x132389[_0x4f3a42(0xc5)](_0x2d349a);});}initPlayer(),document[_0x166bd1(0xd3)+_0x166bd1(0xf0)](_0x166bd1(0xe3)+'u',_0x1f7965=>_0x1f7965[_0x166bd1(0xe5)+_0x166bd1(0xdc)]());
+    const _0x216070=_0xa483;function _0xa483(t,e){t-=105;return _0x5be4()[t]}function _0x5be4(){const t=["ZIPAP","loading-sp","QxvER","7570ivkdyG","https://ra","ZqeUr","error","inner","getElement","HnvXA","VGOVp","747432ofjShS","ById","style","video-titl","substring","3290791uNrkaF","DOMContent","tar video.","/heads/mai","No descrip","Url","age","ription","/json/refs","66VDIAlx","able.","video-desc","addEventLi","error-mess","data","OWOpk","454802fZBCGy"," video.","Gagal meng","Video deng","w.githubus","emukan.","1625652BzDbNv","Error memu","ukan di UR","Untitled V","VBBtJ","stener","ercontent.","1409721RoBVor"," tidak dit","1529230KMyxOO","Descriptio","apLsm","none","XSDNH","oIeGy","8LfRLWY","video-play","tion avail","fDrId","ideo","sIblP","pathname","location","idak ditem","find","src","Judul","1764noQkBf","get","textConten","block","startsWith","Loaded","cVnUs","com/liwa22","ambil data","an ID ","2tQtaLI","display","ID video t","LPspw","n/Video.js"];return(_0x5be4=function(){return t})()}(function(){const t=_0xa483,e=_0x5be4();for(;;)try{if(349660===parseInt(t(169))/1+-parseInt(t(132))/2*(-parseInt(t(182))/3)+parseInt(t(148))/4+-parseInt(t(140))/5*(-parseInt(t(122))/6)+-parseInt(t(153))/7+parseInt(t(110))/8*(parseInt(t(175))/9)+parseInt(t(184))/10*(-parseInt(t(162))/11))break;e.push(e.shift())}catch(t){e.push(e.shift())}})(),document[_0x216070(165)+_0x216070(180)](_0x216070(154)+_0x216070(127),async()=>{const t=_0x216070,e={VGOVp:t(176)+t(155),sIblP:t(125),XSDNH:t(111)+"er",LPspw:t(151)+"e",QxvER:t(164)+t(160),HnvXA:t(138)+t(144),cVnUs:t(166)+t(159),ZqeUr:t(134)+t(118)+t(177)+"L.",fDrId:t(141)+t(173)+t(181)+t(129)+t(161)+t(156)+t(136)+"on",OWOpk:t(178)+t(114),apLsm:t(157)+t(112)+t(163),VBBtJ:t(143),oIeGy:t(171)+t(130)+t(170),ZIPAP:t(107)};let n=window[t(117)][t(116)],a="";n[t(126)]("/")&&(n=n[t(152)](1)),a=n[t(126)]("e/")?n[t(152)](2):n;const o=document[t(145)+t(149)](e[t(108)]),r=document[t(145)+t(149)](e[t(135)]),s=document[t(145)+t(149)](e[t(139)]),i=document[t(145)+t(149)](e[t(146)]),d=document[t(145)+t(149)](e[t(128)]);if(!a)return d[t(124)+"t"]=e[t(142)],void(d[t(150)][t(133)]=e[t(115)]);i[t(150)][t(133)]=e[t(115)];try{const n=await axios[t(123)](e[t(113)],{timeout:1e4}),i=n[t(167)][t(119)](t=>t.id===a);i?(o[t(120)]=i[t(158)],r[t(124)+"t"]=i[t(121)]||e[t(168)],s[t(124)+"t"]=i[t(105)+"n"]||e[t(106)],o[t(165)+t(180)](e[t(179)],()=>{const n=t;d[n(124)+"t"]=e[n(147)],d[n(150)][n(133)]=e[n(115)]})):(d[t(124)+"t"]=t(172)+t(131)+a+(t(183)+t(174)),d[t(150)][t(133)]=e[t(115)])}catch(n){d[t(124)+"t"]=e[t(109)],d[t(150)][t(133)]=e[t(115)]}finally{i[t(150)][t(133)]=e[t(137)]}});
   </script>
+
+  <script>
+    const videoPlayer = document.getElementById('video-player');
+    videoPlayer.addEventListener('contextmenu', e => e.preventDefault());
+  </script>
+
 </body>
 </html>
